// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandedRow component matches snapshot when all values are available 1`] = `
<DocumentFragment>
  <dl
    class="pf-v5-c-description-list pf-m-horizontal pf-m-compact expanded-row"
  >
    <div
      class="pf-v5-c-description-list__group"
      id="fd480a4c-952b-4675-ba02-3370bd08a5ee"
    >
      <dt
        class="pf-v5-c-description-list__term"
      >
        <span
          class="pf-v5-c-description-list__text"
        >
          Provider
        </span>
      </dt>
      <dd
        class="pf-v5-c-description-list__description"
      >
        <div
          class="pf-v5-c-description-list__text"
        >
          aws
        </div>
      </dd>
      <dt
        class="pf-v5-c-description-list__term"
      >
        <span
          class="pf-v5-c-description-list__text"
        >
          Instance type
        </span>
      </dt>
      <dd
        class="pf-v5-c-description-list__description"
      >
        <div
          class="pf-v5-c-description-list__text"
        >
          t2.micro
        </div>
      </dd>
      <dt
        class="pf-v5-c-description-list__term"
      >
        <span
          class="pf-v5-c-description-list__text"
        >
          Idling time
        </span>
      </dt>
      <dd
        class="pf-v5-c-description-list__description"
      >
        <div
          class="pf-v5-c-description-list__text"
        >
          1.03%
        </div>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`ExpandedRow component matches snapshot when values are null 1`] = `
<DocumentFragment>
  <dl
    class="pf-v5-c-description-list pf-m-horizontal pf-m-compact expanded-row"
  >
    <div
      class="pf-v5-c-description-list__group"
      id="fd480a4c-952b-4675-ba02-3370bd08a5ee"
    >
      <dt
        class="pf-v5-c-description-list__term"
      >
        <span
          class="pf-v5-c-description-list__text"
        >
          Provider
        </span>
      </dt>
      <dd
        class="pf-v5-c-description-list__description"
      >
        <div
          class="pf-v5-c-description-list__text"
        >
          N/A
        </div>
      </dd>
      <dt
        class="pf-v5-c-description-list__term"
      >
        <span
          class="pf-v5-c-description-list__text"
        >
          Instance type
        </span>
      </dt>
      <dd
        class="pf-v5-c-description-list__description"
      >
        <div
          class="pf-v5-c-description-list__text"
        >
          N/A
        </div>
      </dd>
      <dt
        class="pf-v5-c-description-list__term"
      >
        <span
          class="pf-v5-c-description-list__text"
        >
          Idling time
        </span>
      </dt>
      <dd
        class="pf-v5-c-description-list__description"
      >
        <div
          class="pf-v5-c-description-list__text"
        >
          N/A
        </div>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;
